# divergentminds

./: agent-teams-komplett.md  content-backup.md
Website Visuals/: IMG_2779.HEIC
adhs-berlin-agents/: .env.example  .gitignore  README.md  orchestrator.py  pyproject.toml  requirements.txt
adhs-berlin-agents/agents/: __init__.py  automation.py  backend.py  base.py  content.py  frontend.py  project_manager.py  qa.py  seo_analytics.py  vibe_coder.py
adhs-berlin-agents/cli/: main.py
adhs-berlin-agents/utils/: __init__.py  config.py  cost_tracker.py  logger.py
adhs-berlin-agents/workflows/: __init__.py  blog_workflow.py  chatbot_workflow.py  feature_workflow.py  newsletter_workflow.py
website/: package-lock.json  package.json  tailwind.config.ts
website/src/app/: layout.tsx  not-found.tsx  page.tsx
website/src/app/community/: page.tsx
website/src/app/ingo/: page.tsx
website/src/app/jaqueline/: page.tsx
website/src/app/kontakt/: page.tsx
website/src/app/meetups/: page.tsx
website/src/app/monti/: page.tsx
website/src/app/nikolay/: page.tsx
website/src/app/privacy/: page.tsx
website/src/app/ressourcen/: page.tsx
website/src/app/terms/: page.tsx
website/src/components/layout/: footer.tsx  mobile-cta.tsx  navbar.tsx
website/src/components/sections/: community-cta.tsx  hero.tsx  meetup.tsx  radar.tsx  recognition.tsx  team.tsx  what-is-dm.tsx
website/src/components/ui/: badge.tsx  button.tsx  card.tsx  contact-form.tsx  container.tsx  page-hero.tsx  (+3 more)
website/src/lib/: constants.ts  motion.ts  resources-data.ts
website/src/styles/: globals.css
(+5 files in other folders)
