[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adhs-berlin-agents"
version = "0.1.0"
description = "KI-Agenten-Team für die ADHS Berlin Community Website"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
adhs = "cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
